# ToyWebServer

./: .gitignore  CMakeLists.txt  README.md  project.sh
includes/core/: producer.hpp  synqueue.hpp  task.hpp  worker.hpp
includes/http1/: helpers.hpp  messages.hpp  reader.hpp  serializer.hpp  writer.hpp
includes/netio/: buffers.hpp  config.hpp  sockets.hpp
includes/uri/: parse.hpp  url.hpp
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  producer.cpp  worker.cpp
src/http1/: CMakeLists.txt  helpers.cpp  messages.cpp  reader.cpp  writer.cpp
src/netio/: CMakeLists.txt  buffers.cpp  config.cpp  socket.cpp  sockets.cpp
src/uri/: CMakeLists.txt  parse.cpp  url.cpp
tests/: CMakeLists.txt  test_uri.cpp
